# todo_list

./: .gitignore  CMakeLists.txt  README.md  quad.fs
.github/workflows/: cmake-multi-platform.yml
assets/: text.fs
backend/: CMakeLists.txt  bgui_backend_freetype.hpp  bgui_backend_gl3.hpp  bgui_backend_opengl3.hpp  bgui_backend_vulkan.hpp
backend/freetype/: bgui_backend_freetype.cpp
backend/gl3/: CMakeLists.txt  bgui_backend_gl3.cpp  gl3_shader.cpp  gl3_shader.hpp
backend/gl3/glad/: glad.c
backend/glfw/: bgui_backend_glfw.cpp
backend/include/freetype/: font.hpp
backend/include/opengl3/: shader.hpp
backend/opengl3/: CMakeLists.txt  bgui_backend_opengl3.cpp  opengl3_shader.cpp  opengl3_shader.hpp
backend/source/opengl3/: shader.cpp
backend/vulkan/: bgui_backend_vulkan.cpp
bgui/: CMakeLists.txt
bgui/include/: bgui.hpp  element.hpp  layout.hpp  utils.hpp
bgui/include/elem/: button.hpp  element.hpp  hl.hpp  layout.hpp  linear_layout.hpp  text.hpp
bgui/include/gl/: shader.hpp
bgui/include/os/: font.hpp  os.hpp
bgui/include/utils/: mat.hpp  material.hpp  theme.hpp  vec.hpp
bgui/source/: bgui.cpp  element.cpp
bgui/source/elem/: button.cpp  element.cpp  hl.cpp  layout.cpp  linear_layout.cpp  text.cpp
bgui/source/elements/: absolute_layout.cpp
bgui/source/gl/: shader.cpp
bgui/source/os/: font.cpp  os.cpp
bgui/source/utils/: material.cpp
core/include/: bgui.hpp
core/include/elem/: button.hpp  checkbox.hpp  element.hpp  input_area.hpp  text.hpp  text_input.hpp  window.hpp
core/include/lay/: layout.hpp  linear.hpp
core/include/os/: os.hpp
core/include/utils/: border.hpp  draw.hpp  material.hpp  propertie.hpp  style.hpp  texture.hpp  theme.hpp  uid.hpp  vec.hpp
core/source/: bgui.cpp
core/source/elem/: button.cpp  checkbox.cpp  element.cpp  input_area.cpp  text.cpp  text_input.cpp  window.cpp
core/source/lay/: layout.cpp  linear.cpp
core/source/os/: os.cpp
core/source/utils/: material.cpp
exemples/: CMakeLists.txt
exemples/glfw_gl3/: CMakeLists.txt  main.cpp
exemples/glfw_opengl3/: main.cpp
include/: tlb.hpp
libs/include/glad/: glad.c  glad.h
source/: main.cpp  tlb.cpp
tests/: CMakeLists.txt  all_tests.cpp  test_elem.cpp
tlb/: CMakeLists.txt
tlb/include/: tlb.hpp
tlb/source/: main.cpp  tlb.cpp
